docs/report/versions/v0.1/09-感知与表示学习.md
# 第九部分 感知与表示学习

在具身系统中，感知从来不是孤立视觉任务的集合，而是行动系统形成内部世界的入口。一个机器人是否“看见了世界”，并不由它能否输出漂亮的分类标签决定，而由它能否形成足以支持抓取、移动、接触、规划和恢复的状态结构决定。因此，本部分的重点不只是罗列 2D、3D、触觉和多模态模型，而是解释：什么样的感知表征才真正对行动有用，哪些感知成功在部署时会失效，以及为什么表示学习最终会成为感知与后续决策系统之间的真正桥梁。

一个对机器人更贴切的表述是：感知模块输出的不是“标签”，而是状态估计器、规划器和控制器能够消费的内部变量。也就是说，感知的优劣不只体现在感知评测基准上，还体现在它是否能提供稳定的位姿、对象边界、接触迹象、遮挡关系和任务相关可供性。
过去十余年的代表性路线，大体沿着对象级视觉分割、通用视觉表征、自监督预训练、三维几何表示和触觉感知五个方向展开。
其中，分割路线常回到 Segment Anything（SAM），表征路线常引用 DINOv2 与 MAE。
三维几何与触觉路线则常分别回到 PointNet 和 GelSight。
相关论文可参见 [SAM 论文](https://arxiv.org/abs/2304.02643)、[DINOv2 论文](https://arxiv.org/abs/2304.07193)、[MAE 论文](https://arxiv.org/abs/2111.06377)、[PointNet 论文](https://arxiv.org/abs/1612.00593) 与 [GelSight 触觉视觉论文](https://arxiv.org/abs/1706.09942)。

## 42. 视觉感知

### 42.1 2D 感知任务

检测、分割、跟踪和关键点估计仍然是大量机器人任务的直接入口，因为系统首先需要从图像中定位对象、边界、可抓取区域和动态变化。问题在于，机器人中的视觉感知成功标准并不完全等于 benchmark 精度，而更关心：目标位姿够不够准、遮挡下还能不能工作、视角变化后是否稳定、输出能不能直接服务于下游控制链路。

如果把 2D 感知仅理解为“图像分类和检测任务的机器人翻版”，就会低估其在闭环系统中的真实职责。对抓取任务而言，检测结果最关键的往往不是论文表上的 `mAP`，而是能否稳定提供抓取候选区域、能否在视角变化与局部遮挡后继续完成重定位、能否把对象状态绑定到机器人坐标系；对导航与移动操作而言，分割图也不是为了“看懂图片”本身，而是为了把可通行区域、风险区域和可交互对象结构化地交给局部规划器。也就是说，2D 感知在具身系统里首先是动作前的状态构造器，而不是独立竞赛任务。
这也是为什么开放词汇感知、提示式分割和通用视觉 backbone 会在具身智能语境中重新变得重要。它们不只是提高了视觉模型的泛化性，更重要的是降低了在新对象和新任务上重新搭建对象级接口的成本。但这些路线是否真正有用，仍然要回到机器人标准上检验：跨视角是否稳、与位姿估计是否能闭合、时序上是否足够一致、失败后是否易于重定位，而不是只看静态基准分数。[Segment Anything](https://arxiv.org/abs/2304.02643) [DINOv2](https://arxiv.org/abs/2304.07193)

若把 2D 感知对下游真正有用的部分形式化，它更像是在估计一个任务相关状态而不是一组孤立标签：

\[
\hat s_t^{2D}=f_{\theta}(I_t)=(\hat b_t,\ \hat m_t,\ \hat k_t,\ \Sigma_t)
\]

其中 \(\hat b_t\) 是对象候选框，\(\hat m_t\) 是边界或可交互区域，\(\hat k_t\) 是关键点或抓取锚点，\(\Sigma_t\) 则是与这些量绑定的不确定性。这个写法的重要性在于，它迫使我们在阅读论文或企业 demo 时追问：输出究竟是直接可用于动作的状态，还是仍需大量人工后处理才能进入技能层。只有前者，才真正构成具身系统中的 2D 感知能力。

因此，机器人中的 2D 感知评价口径至少应同时覆盖四个维度：检测/分割精度、跨视角一致性、时序稳定性与坐标系可闭合性。很多路线在前两项上表现很好，却在后两项上暴露问题，于是离真实抓取、接近和闭环恢复仍然差一层系统接口。

### 42.2 语义分割、检测与跟踪
这三类任务常被并列提及，但它们为机器人提供的信息层级并不相同。检测回答“哪里有什么”，语义分割回答“每个像素属于什么”，跟踪则回答“同一个对象随时间如何连续存在”。对具身系统而言，很多后续动作并不只需要看到物体，还需要在时间上持续知道“还是不是同一个物体、是不是已经被抓住、是不是离开了原位置”。

一个极简感知链路可以写成：

```python
boxes = detector(image)
masks = segmentor(image)
tracks = tracker(boxes, masks, prev_state)
```

这说明感知输出不只是静态标签集合，而往往是带时间连续性的对象状态接口。若把这类接口正式写出来，更接近机器人系统实际消费方式的形式通常是：

\[
s_{i,t}^{obj} = (b_{i,t}, m_{i,t}, id_{i,t}, \hat{T}_{i,t}, \Sigma_{i,t}, \chi_{i,t})
\]

其中 \(b_{i,t}\) 是检测框，\(m_{i,t}\) 是分割掩码，\(id_{i,t}\) 是跨帧身份，\(\hat{T}_{i,t}\) 是对象位姿或相对位姿估计，\(\Sigma_{i,t}\) 是不确定性，\(\chi_{i,t}\) 则表示对任务有用的附加属性，例如“把手是否可见”“边缘是否可抓”“当前是否已被夹持”。这样写的价值，在于它把检测、分割、跟踪重新压缩成一个可被技能层、状态估计器和规划器复用的对象级状态单元。

如果进一步从执行接口角度看，检测、分割与跟踪其实对应三种不同粒度的状态承诺。检测告诉系统“对象大概在哪里”，分割告诉系统“边界与可交互区域在哪里”，跟踪则告诉系统“这个对象还是不是刚才那个对象、它是否保持了同一任务身份”。在整理、抓取、递送和装配任务中，这三层信息往往分别对应候选生成、接触准备和闭环重定位。也正因如此，机器人视觉里的“跟踪失败”常常不只是 identity switch 这么简单，而是会直接导致技能层把后续动作施加到错误对象或过时位姿上。

从学习角度看，这三项任务之所以在机器人里必须一起看，是因为它们共同定义了“对象状态”而不是单张图像标签。若检测框太粗，接近轨迹和抓取候选就会受影响；若分割边界不稳，接触区域估计和遮挡推断都会抖动；若跟踪身份漂移，系统就可能在任务执行过程中把“刚才拿起的杯子”和“桌上另一只杯子”混为一谈。对具身系统来说，感知误差往往不是静态分类错误，而是状态接口在时间轴上的失真。

进一步说，三者的失效模式也不相同。检测失败通常表现为候选漏掉或类别误检；分割失败通常表现为边界抖动、可接触区域估错或遮挡关系误判；跟踪失败则更像任务身份错乱，会把“当前应继续操作的对象”切换成“场景中另一个看起来相似的对象”。这三种失效在论文表格里可能都被归入感知误差，但在机器人闭环中造成的后果完全不同，因此也不能仅用统一的视觉分数来总结。

语义分割与检测的意义，在于把场景从像素组织成对象级结构；跟踪则把这一结构延伸到时间维度。对机器人而言，时间连续性尤为关键，因为行动系统通常不是在单帧上决策，而是在持续观测中更新任务状态。Segment Anything 之类通用分割模型当然提高了可迁移性，但其价值在机器人里仍要看能否在实时性、视角变化和下游动作约束下持续工作。[Segment Anything](https://arxiv.org/abs/2304.02643)

### 42.3 第一视角与第三视角差异
第一视角的困难还在于，感知器本身会被动作不断扰动。相机随着机械臂、底盘或头部运动而移动，意味着观测分布和行动分布天然耦合，系统必须在“正在动作导致视角变化”的情形下维持表征稳定。这和互联网视觉中常见的静态观察者假设差异很大。很多模型离线看图很强，但一到真实机器人上就出现“运动中失去目标”“接近后目标被自身末端遮挡”“触碰前最后关键几帧最不稳定”的问题，本质上都和第一视角闭环特征有关。

机器人视觉和互联网视觉一个重要差异在于视角。大量机器人数据来自 egocentric first-person view，而不少互联网视觉模型更多在第三视角数据上训练。二者对遮挡、尺度变化、交互物体可见性和动作上下文的编码方式并不相同。因此，直接把通用视觉模型迁移到机器人上时，第一人称视角偏移常常是一个被低估的问题。

更进一步看，第一视角不只是“相机装在机器人身上”，而是意味着观测过程本身成为控制过程的一部分。系统会为了看清目标而主动移动，会因为接近目标而失去原先视角，也会因为末端执行器进入画面而改变自身观测分布。因此，第一视角机器人感知天然更接近主动感知问题，而不是被动识别问题。也正因为如此，很多在静态数据集上表现很强的 backbone，迁移到真实机器人后仍要额外结合多帧跟踪、重观察策略和动作诱导视角调整，才能进入稳定闭环。

这一定义对后续系统设计也有直接影响。若系统承认第一视角是主动感知问题，那么“感知失败”就不再只对应换一个更强视觉模型，还可能对应改变接近策略、插入重观察动作、或在遮挡发生前主动调整视角。换句话说，感知能力的一部分，其实被写在动作策略里。

这也解释了为什么第一视角系统常需要把“再看一眼”写成正式动作，而不是临时补救。一个极简的主动重观察策略可以写成：

```python
if occlusion_score(target) > tau or pose_cov(target) > sigma_max:
    waypoint = select_reobserve_view(target, robot_state)
    execute(waypoint)
    refresh_object_state()
```

这里的关键不在于伪代码本身，而在于它明确承认：视角管理也是感知系统的一部分。许多所谓“视觉模型不稳”，在工程上更准确地说，是“系统没有把观察动作与识别动作共同设计”。在真实机器人里，这两者必须同时进入闭环。

如果把这一问题进一步形式化，那么第一视角感知更接近一个“动作条件下的信息获取”问题，而不是一次静态分类问题。一个常见写法是：

\[
a_t^{\text{view}}
=
\arg\max_{a \in \mathcal{A}_{\text{observe}}}
I(s_{t+1}; o_{t+1}\mid a, h_t)-\lambda C(a)
\]

其中 \(I(\cdot)\) 表示动作后观测对目标状态不确定性的消除量，\(C(a)\) 表示为了获得该视角所付出的时间、能耗或碰撞风险代价。这个写法的意义在于提醒读者：在第一视角系统里，“下一步去哪里看”与“下一步怎么做任务”常常是同一个联合优化问题，而不是两个相互独立的模块。

这也直接影响训练数据与评测协议。若一个数据集主要由稳定第三视角视频组成，那么模型学到的往往是对象识别和粗语义匹配；若数据中包含大量接近、遮挡、末端入镜和重观察动作，模型才更有机会学到第一视角闭环中真正决定成败的状态转移。因此，后续阅读任何“机器人视觉性能提升”的论文时，都应追问其训练样本究竟是否覆盖了视角主动变化、目标短暂消失和动作诱导遮挡这些关键情形。否则，所谓性能提升可能只是第三视角基准上的改善，而非第一视角具身闭环中的能力提升。

### 42.4 自监督视觉表征为何重要
但“有一个强视觉 backbone”并不自动等于“有了可用的机器人感知层”。真正关键的是这些预训练特征能否在小样本微调、跨相机迁移、弱标注适配和下游几何任务中保持稳定；换句话说，要看它们是不是能成为状态估计、抓取候选评估和任务切换判断的底座，而不只是分类或分割头的好初始化。这也是为什么很多机器人系统会把大规模自监督特征与少量任务特定标注、时序一致性损失和几何约束联合使用，而不是直接端上一个互联网视觉 backbone 就期待闭环成立。

更本质地说，自监督表征改变的是“机器人感知先验从哪里来”这一问题。传统路线往往把大量任务知识压在人工标签和专门检测头里，而自监督预训练试图先学习一个更通用的中间世界表示，再通过少量任务监督把它牵引到抓取、导航、状态估计或异常判断上。这样做的价值，不在于完全摆脱标签，而在于显著降低每个新任务都重新定义视觉语义的成本。

若写成训练目标，一个在机器人里更常见的最小形式可以抽象为：

\[
L = L_{\mathrm{ssl}} + \lambda_{tc} L_{\mathrm{temporal}} + \lambda_{geo} L_{\mathrm{geometry}}
\]

其中 \(L_{\mathrm{ssl}}\) 对应遮挡重建、对比学习或教师-学生一致性等自监督目标，\(L_{\mathrm{temporal}}\) 用来约束相邻时刻或相邻视角下表征的稳定性，\(L_{\mathrm{geometry}}\) 则把深度、位姿或多视角重投影等几何先验重新拉回特征学习。这个分解说明，机器人里的自监督很少只是“先在互联网图像上预训练一下”，而更像“预训练特征 + 时序一致性 + 几何约束 + 少量任务监督”的联合体系。

一个极简训练工作流可以写成：

```python
for clip in robot_dataset:
    z = backbone(clip.frames)
    loss = ssl_objective(z)
    loss += lambda_tc * temporal_consistency(z, clip.actions)
    loss += lambda_geo * geometry_regularizer(z, clip.depth, clip.pose)
    update(backbone, loss)
```

这段伪代码的意义，在于把“表征强不强”重新落回具身系统真正关心的问题上：特征是否能在动作扰动下保持可比，是否能在接近、遮挡和接触前后保留稳定结构，是否能在少量标注下快速迁移到新对象与新工位。

对具身系统而言，更重要的判断标准是这些表征是否具备时序稳定性与动作相关性。一个在静态图像 benchmark 上表现极强的 backbone，若在机械臂遮挡、运动模糊、视角变化和接触前后状态切换中频繁漂移，就未必适合作为闭环上游特征。因此，机器人需要的不是“单帧最会看图”的特征，而是“在系统正在行动时仍然可比较、可跟踪、可回放”的特征。这也是为什么视频预训练、跨视角一致性和动作条件表征在具身场景中会比单纯的图像分类迁移更有实际价值。

机器人感知的一个长期瓶颈，是标注太贵、场景太多变、部署分布与训练分布差异太大。因此，自监督视觉表征在具身系统里比在标准视觉任务中更有现实意义。MAE 通过遮挡重建学习 patch 级结构，DINOv2 则更强调可迁移的通用视觉特征；前者更偏表征学习机制，后者更偏大规模稳定预训练产物。对机器人而言，这类基础视觉表征的真正价值，是减少每个新场景都要从头收集密集标注的负担。[MAE](https://arxiv.org/abs/2111.06377)、[DINOv2](https://arxiv.org/abs/2304.07193)

## 43. 三维感知

### 43.1 深度估计
深度估计的最小目标，是为系统补上“场景中各点离相机有多远”这一维信息，从而把 2D 视觉重新锚定到 3D 行动空间。它可以来自双目、结构光、ToF、单目学习模型或多视角重建，不同路线的核心差别在于精度、噪声模式、时延和对环境条件的敏感性。

若写成最简单形式，深度估计就是：

\[
D_t = f_\theta(I_t)
\]

其中 \(I_t\) 是当前图像，\(D_t\) 是深度图。对机器人来说，这个量的真正价值在于后续可被用于抓取位姿估计、障碍距离判断、空间重建和接触前减速，而不只是“把画面变成了三维感”。

但机器人部署里更实用的写法往往不是只输出一张深度图，而是同时输出深度与置信结构：

\[
(\hat{D}_t, \Sigma_t^{D}) = f_\theta(I_t)
\]

这里 \(\Sigma_t^{D}\) 可以理解为深度不确定性或置信度图。原因很现实：对抓取、装配和近距离避障而言，系统真正关心的不是“平均深度误差小不小”，而是“哪些区域的深度足够可信，可以进入动作候选；哪些区域风险太高，需要重观察或降级执行”。成熟系统往往会把低置信区域直接标记为“暂不可执行几何”，而不是假设所有像素都同样可靠。

二维图像足以支持部分语义理解，但对抓取、避障、操作和导航而言，系统还必须理解空间结构。深度估计是最直接的入口，因为它把像素层面信息转化为几何层面信息。然而，机器人真正关心的不只是“深度图看起来是否合理”，而是这些深度信息是否足够支持可执行的空间推理。

从相机模型角度看，一个像素 \((u,v)\) 对应深度 \(d\) 时，可恢复相机坐标系中的三维点：

\[
X = \frac{(u-c_x)d}{f_x}, \qquad
Y = \frac{(v-c_y)d}{f_y}, \qquad
Z = d
\]

这一关系看似基础，却决定了视觉结果能否进入抓取位姿估计、点云重建与碰撞检测链路。

如果把误差传播也考虑进去，则像素与深度噪声会被一起放大到三维空间：

\[
\Sigma_{XYZ} \approx J_{\pi^{-1}} \Sigma_{uvd} J_{\pi^{-1}}^\top
\]

其中 \(J_{\pi^{-1}}\) 是反投影雅可比矩阵，\(\Sigma_{uvd}\) 则表示像素和深度测量噪声。这个式子在本章的意义并不在于要求读者手算协方差，而在于提醒一个部署事实：同样是“一点点深度误差”，在远距离、斜视角、边缘区域和接触前局部几何上，最终造成的三维偏差并不相同。也正因为如此，很多真实系统会在深度估计之后再接一层局部重观察、深度滤波或几何一致性检查，而不是直接把单帧结果交给抓取与避障模块。

### 43.2 点云与体素表示
点云与体素表示是把深度信息组织成可计算三维结构的两条典型路线。点云更接近原始几何采样，适合保留细节但不规则；体素则把空间划分成规则网格，便于卷积或占据推理，但会带来分辨率与内存代价。

一个最小转换过程可以写成：

```python
point_cloud = backproject(depth, intrinsics)
voxel_grid = voxelize(point_cloud, resolution)
```

对学习者来说，这一节最重要的不是记住两种表示名词，而是理解：表示选择会直接影响后续抓取、重建、避障和对象级推理的计算方式。

PointNet 及其后续工作说明，点云可以被直接作为集合结构处理，而不必强行投影回二维图像。[PointNet](https://arxiv.org/abs/1612.00593) 对机器人而言，点云、体素和 TSDF 之类表示的意义，在于它们更直接编码了空间邻接、表面结构和碰撞几何，因此常在抓取、建图和局部规划中发挥核心作用。

但从工程角度看，三维表示的难点远不止“如何把点云送进网络”。点云是稀疏且不规则的，局部密度受视角、距离和反射特性强烈影响；多帧拼接又会把时间同步误差、外参误差和运动畸变叠加进表示里。更重要的是，抓取与接触操作真正需要的常常不是抽象的“三维理解”，而是对象表面法向、边缘、间隙、遮挡背后的不确定性以及碰撞几何。于是，一个三维表示是否好用，最终要看它如何进入抓取姿态采样、碰撞检测、接近轨迹生成和接触前可达性筛选。

若把三维表示真正放回执行链路中，它通常至少会流向四类下游模块：对象级姿态估计、局部可达性判断、抓取/放置候选生成，以及碰撞与空间约束检查。也因此，研究者不应只问“这个 3D backbone 在 benchmark 上多强”，而应继续追问它输出的几何结构是否足够稳定地支持这些下游步骤。对机器人来说，可执行性往往比可视化重建效果更重要。
因此，图像、点云和体素在真实系统里往往形成层次化流水线而非彼此替代：图像负责快速给出对象级候选和语义先验，点云/体素负责提供可执行几何，状态估计器再把这些信息绑定到机器人动作坐标系上。很多表面上“端到端”的三维系统，在部署时仍保留显式几何模块，本质原因就在于碰撞、接近和接触可行性这些问题仍然很难被完全隐式吸收。

### 43.3 场景重建与对象级理解

场景重建与对象级理解的价值，在于它把零散感知信号组织成可被操作和规划消费的结构化世界。单帧检测告诉系统“看到了什么”，而重建与对象级建模进一步回答“它们在哪里、相互什么关系、哪些部分可接触、哪些部分构成约束边界”。对具身任务来说，后者往往比前者更接近真正可执行的知识。

也因此，这一层问题不应只被理解为视觉几何研究，而应被理解为“为操作提供世界接口”。若系统无法把环境组织成对象、部件、支撑关系与可供性层次，它就很难稳定地把高层语义落到低层动作上。
这里的关键不只是“能不能重建出地图”，而是重建结果是否以任务可消费的方式组织。对于移动机器人，地图需要回答可通行性、占据关系和目标检索；对于操作机器人，场景重建还要支持对象可达性、遮挡关系和未来接触空间判断。也就是说，场景重建一旦进入具身语境，就必须从几何完成度转向任务结构完成度。很多研究论文展示出漂亮的三维重建，但若这些结果无法稳定进入抓取候选筛选、基座停靠选择或操作前视点规划，那么它对系统主链条的价值就仍然有限。

当系统从瞬时感知走向长期操作，就需要把多帧观测整合成更稳定的场景表示。对象级重建、局部场景图和语义地图于是开始变得重要。这一步会自然连接到后文的世界模型与环境记忆：三维感知若不能形成可累积结构，就很难支持长时程任务。

也就是说，场景重建在具身系统里最关键的价值，并不是把环境“看得更完整”，而是把后续规划、记忆和技能调用需要的空间结构稳定沉淀下来。只要这一沉淀做不好，机器人就仍会在每一步都重新从原始像素开始理解世界。

若把这种“对象级世界接口”写成更接近系统消费的形式，它通常更像一个场景图而不是一整块连续几何：

\[
G_t = (V_t,\ E_t), \qquad
v_i = (\hat T_i,\ \text{class}_i,\ \text{affordance}_i,\ \rho_i)
\]

其中节点 \(v_i\) 既包含对象位姿 \(\hat T_i\)，也包含类别、可供性和置信度；边 \(E_t\) 则编码支撑、遮挡、邻接和可达等关系。把重建结果写成这种结构的意义，在于它能同时服务于抓取候选筛选、放置关系判断、移动操作路径选择和长期记忆写入，而不只是生成“更完整的 3D 模型”。

真正进入系统后，这个图还必须是可更新的，而不是一次性离线重建结果。更贴近工程接口的写法通常是：

\[
G_{t+1}=\operatorname{Update}\!\left(G_t,\ \hat O_{t+1},\ u_t,\ \mathcal{M}_{t+1}\right)
\]

其中 \(\hat O_{t+1}\) 表示新观测到的对象证据，\(u_t\) 表示本轮动作导致的世界变化假设，\(\mathcal{M}_{t+1}\) 则表示与长期记忆或地图的一致性约束。只有把动作后果显式写进更新过程，场景图才不会退化成“每帧重新识别一遍”的视觉缓存，而能成为真正支持长期任务的世界接口。

因此，场景重建的典型失败模式也不只是几何误差大，而是三类更贴近任务的问题。第一类是对象身份漂移，即同一物体在多帧中被重复登记或错误合并；第二类是关系错误，例如把“桌上杯子”误建模为“杯子遮挡桌面”而非“杯子被桌面支撑”；第三类是可供性缺失，即系统虽然重建出了形状，却没有正确标出哪些表面可抓、哪些边缘可作为放置约束、哪些区域仅是视觉可见而非物理可达。只要这三类错误存在，后续规划、技能调用和长期记忆都会被系统性污染。

这也是为什么对象级理解不只是视觉章节的“高级版功能”，而是后续世界模型、VLA 与部署章节的共同前提。只要世界接口仍停留在像素或局部 patch 层，系统就必须在每一轮规划时重复解释大量低层细节；而一旦对象、关系和可供性被稳定提升为中层状态，很多高层推理、技能检索和异常恢复才有真正可复用的支点。

### 43.4 三维感知的真实难点
三维感知最容易被低估的地方，在于它并不只是“把二维识别升级成点云识别”。一旦进入机器人闭环，三维表征必须同时承担几何定位、遮挡推断、可抓取性判断、碰撞风险评估和接触前姿态规划等职责。也就是说，三维感知的输出不是纯粹为了“看懂场景”，而是为了后续动作决策提供可执行结构。

真实难点通常集中在四处。第一，传感器噪声与遮挡会使局部几何严重不完整，尤其在透明、反光、黑色或柔性物体上更明显。第二，不同传感器坐标系、刷新率和视场角不一致，导致多源融合远比静态 benchmark 复杂。第三，机器人真正关心的不是场景几何本身，而是与动作有关的那部分几何，例如接触面、可通行空隙、受力方向与支撑稳定性。第四，三维估计误差会被后续控制放大，因此“几厘米误差”在操作任务里常常已经不可接受。

因此，三维感知最重要的不是追求越来越复杂的表示名词，而是明确表征究竟服务于哪类动作接口。若后续控制需要的是接触前局部精几何，那么全局语义场景图未必是最紧迫的；若任务更偏导航与场景理解，则可通行拓扑和对象关系图反而更重要。三维感知的价值必须放回动作闭环里判断。

三维感知的难点远不只是“比二维更复杂”。它真正棘手的地方在于，深度缺失、遮挡、反光、透明材质、视角稀疏、传感器噪声和动态物体会同时作用，使得系统很难始终得到稳定、完整且可操作的三维结构。对许多任务来说，最关键的恰恰是那些最难被稳健观测的局部几何细节。

这也是为什么很多纯视觉演示在三维接触任务前会迅速暴露边界。三维感知不是给系统“多一个酷炫表示”，而是在为接触、对位、插接、抓取和避障这些真实动作提供必要的空间约束基础。
进一步说，三维感知的难点常常集中在那些对执行最关键、却在数据集中最少被认真覆盖的角落条件上。例如，玻璃杯边缘、塑料袋、柔性包装、餐具堆叠、反光金属件、部分嵌套零件，这些对象往往恰恰出现在真实抓取和装配场景里。它们会同时破坏深度估计、点云完整性和接触可行性判断，因此系统级应对方式通常不是寄希望于单一三维模型一次解决，而是通过多视角观察、动作诱导重观察、触觉补偿和失败后重定位来形成鲁棒闭环。

机器人中的三维感知难点并不只在“网络结构不够强”，而在于透明体、镜面反射、细长物体、局部遮挡、接触后物体姿态变化与近距离视角退化。这意味着三维感知系统若只在干净点云 benchmark 上表现出色，并不能自动说明其适合部署在真实操纵系统中。

## 44. 触觉、力觉与本体感觉

### 44.1 触觉传感器路线

触觉传感器路线之所以始终没有真正退出机器人主线，是因为它们承担的是视觉难以替代的那部分信息通道。无论是接触是否发生、局部受力方向、滑移趋势，还是物体表面微结构和材料变化，这些信号常常只有在接触之后才真正可见，而这正是许多操作任务的决定性阶段。

不同触觉路线在分辨率、带宽、耐久性、成本和集成复杂度上差异很大，因此问题从来不是“要不要触觉”，而是“在哪些任务上、以什么成本结构、接入怎样的控制闭环”。触觉路线的复兴，本质上是任务约束把它重新拉回了中心。
从系统设计角度看，触觉传感器路线的分化也很重要。有的路线强调高分辨率表面形变成像，适合精细接触几何推断；有的强调阵列式压力分布，适合低成本接触检测与滑移趋势判断；有的则嵌入灵巧手或末端夹爪内，用于把抓取稳定性反馈更早送回控制环。不同触觉路线并不存在简单的“一种更先进”，而是对应不同时间尺度和接口需求。对具身系统来说，真正关键的是触觉信号能否足够快、足够稳地参与动作修正。

若把触觉观测抽象成一个最小接口，可以写成：

\[
o_t^{touch} = (P_t, \Delta P_t, c_t, \hat{n}_t)
\]

其中 \(P_t\) 是压力或形变分布，\(\Delta P_t\) 是短时间内的变化趋势，\(c_t\) 是接触事件状态，\(\hat{n}_t\) 则可理解为局部接触法向、切向或滑移相关估计。高分辨率视觉触觉器件更擅长提供 \(P_t\) 的细节结构，阵列式或低成本触觉器件更常用于提供 \(c_t\) 与粗粒度压力分布，而力/扭矩传感器则更接近在末端坐标系中补充 \(\hat{n}_t\) 一类整体受力信息。把这些变量写出来的意义，在于说明“触觉”不是一个模糊名词，而是一组真正进入控制闭环的状态量。

在多模态融合里，触觉通常不会单独工作，而是与视觉和本体感觉共同构成接触阶段状态：

\[
z_t^{contact} = \mathrm{Fuse}(z_t^{vision}, o_t^{touch}, x_t^{proprio})
\]

这个式子强调的不是某种特定网络结构，而是职责分工：视觉负责接触前几何与对象身份，本体感觉负责身体姿态与执行器状态，触觉负责把“接触已经发生后局部真实发生了什么”这件事补回来。谁能把这一融合接口做稳，谁就更可能跨过“最后几厘米”的执行鸿沟。

视觉擅长远距离观测，却难以在接触发生后持续提供局部精确信息。触觉路线因此重新受到重视，因为许多最困难的操作问题恰恰发生在视觉已经不够用的接触阶段。GelSight 一类高分辨率视觉触觉传感器的价值，就在于它能把局部接触形变转化为可学习的丰富信号。[GelSight](https://arxiv.org/abs/1706.09942)

### 44.2 力反馈与稳定抓取
力反馈之所以重要，是因为抓取成功并不只取决于“夹爪碰到了物体”，还取决于接触力是否分布合理、是否出现滑移、是否已经过压、是否需要重新调整姿态。视觉常能告诉系统“抓到了哪里”，但力反馈更能告诉系统“现在抓得稳不稳”。

一个极简闭环可以写成：

```python
while grasping:
    force = read_force_sensor()
    grip = grip_controller(force, slip_estimate)
    apply(grip)
```

这也是为什么许多精细操控任务会重新强调力觉与触觉，而不是继续只靠视觉外推接触状态。

力觉不仅用于“感知接触到了什么”，更用于判断当前抓取是否稳定、接触是否滑移、装配是否卡滞。很多高精度操作的真正难点，并不是看不见对象，而是在看见之后仍然难以在接触中维持合适作用力。

如果说视觉更擅长回答“我应该从哪里接近”，那么力觉更擅长回答“我现在是否已经稳定接触上了”。插孔、旋拧、卡扣、柔性物体整理、半遮挡抓取等任务的真正难点往往并不是感知对象类别，而是接触一旦发生之后，系统如何根据受力变化及时修正位置、姿态与作用力。没有这一层反馈，机器人常会表现出一种典型失败模式：接近阶段看起来都正确，真正接触之后却迅速滑脱、卡滞或过载。
在系统接口上，力觉的重要性通常通过阻抗控制、混合力位控制、接触事件检测和局部回退状态机进入控制层。也因此，力觉不应被理解为“视觉之外多加一条传感器”，而应被理解为接触任务中的主导反馈模态之一。

若把力反馈闭环压成一个最小控制律，它通常更接近：

\[
u_t = K_p(x_t^{*}-x_t) + K_f(f_t^{*}-f_t)
\]

其中第一项负责位置或姿态误差，第二项负责接触力误差。这个式子说明，很多稳定抓取与装配问题都不是“只有位置控制”或“只有力控制”，而是两者在不同阶段的权重切换。真正的难点往往出现在接触建立的瞬间，因为这一时刻既不能完全相信视觉估计，也不能把所有偏差都交给高刚度位置控制硬扛。

若进一步把“是否会滑”这一问题写出来，很多接触任务都隐含一个摩擦约束：

\[
\|f_t^{\text{tan}}\| \le \mu f_t^{\text{nor}}
\]

其中 \(f_t^{\text{tan}}\) 是切向力，\(f_t^{\text{nor}}\) 是法向力，\(\mu\) 是局部摩擦系数。这个约束虽然简化，却足以说明抓取稳定性并不是“夹紧一点就行”，而是受摩擦、接触面积、对象材质和姿态扰动共同决定。许多系统在视觉上看起来已经对准目标，却仍然在提起瞬间滑脱，正是因为真实受力状态并未满足稳定接触条件。

从工程接口上看，力反馈也很少单独工作，而是和接触事件检测、阻抗切换、局部退让和滑移估计一起构成一个接触状态机。例如，当检测到切向力快速上升而对象位姿仍未稳定时，系统更合理的动作通常不是继续加大位置增益，而是切换到更柔顺的接近模式、增加夹持力或执行微小重定位。也就是说，稳定抓取真正依赖的是“接触后如何重写控制律”，而不仅是“接触前如何看准目标”。

因此，稳定抓取的典型失败模式通常包括三类：夹持力不足导致滑移、夹持力过大导致物体损伤或姿态扰动，以及局部接触建立错误导致看似抓住实则力链不闭合。后续凡是看到某条路线宣称“精细操作提升明显”，都应追问其是否显式引入了这类接触反馈机制。

### 44.3 本体状态估计与闭环控制

本体状态估计是感知和控制之间最容易被忽略、却最关键的中间层之一。机器人不仅要理解外部世界，也必须持续理解自身关节、速度、姿态、接触状态和执行器实际响应，否则外部感知再强，动作执行也可能建立在错误身体假设上。

因此，本体状态估计不只是低层工程细节，而是具身系统保持闭环稳定的身体自我感知机制。它越可靠，高层策略与外部感知提供的信息才越可能真正兑现为稳定行为。
这一点在大模型叙事中经常被低估，因为本体感觉看起来不如视觉语言输入那样“智能”。但从控制闭环角度看，本体状态往往是最硬、最即时、最不可替代的状态来源。双足行走中的重心转移、机械臂奇异位姿附近的速度放大、末端执行器过流、驱动温升与接触前振动，很多都是先在本体信号里出现，再晚一步才在外部世界中表现出来。因此，真正稳健的具身系统往往不是“用视觉替代本体”，而是用本体状态构成底层稳定骨架，再把外部感知叠加到更高层决策上。

本体感觉包括关节位置、速度、电流、姿态、触地信息和执行器内部状态等。对足式运动、全身控制和动态操作而言，本体感觉常常比外部视觉更直接决定短时稳定性。也就是说，机器人“知道自己现在在做什么”的方式，不完全来自看世界，也来自感知自身。

若把本体状态写成最小状态向量，则可近似表示为：

\[
x_t^{\text{prop}} = (q_t,\ \dot q_t,\ \tau_t,\ I_t,\ T_t,\ c_t)
\]

其中 \(q_t\) 是关节角，\(\dot q_t\) 是关节速度，\(\tau_t\) 是力矩或估计受力，\(I_t\) 是电流，\(T_t\) 是温升或热状态，\(c_t\) 则是接触相关离散状态。这个向量的意义在于提醒我们：本体状态并不是单一“机器人姿态”，而是一组直接决定可执行性和健康状态的内部变量。很多看起来是外部感知失败的问题，实际上最早是在这里以过流、抖振、饱和或接触异常的形式暴露出来。

从融合接口上看，更稳健的系统通常不是用视觉替代本体，而是把二者写成互补状态估计：

\[
\hat x_t = \operatorname{Fuse}(x_t^{\text{prop}},\ x_t^{\text{vision}},\ x_t^{\text{tactile}})
\]

这样做的核心目的，是让高频稳定性依赖本体感觉，低频语义与外部几何依赖视觉和触觉，再由状态估计层把三者重新组织成可被控制与规划共同消费的系统变量。

### 44.4 为什么接触感知在具身智能里会重新升温

接触感知重新升温的直接原因，是大模型和视觉表征虽然显著提升了“看”的能力，却没有自动解决“碰”的问题。大量真实任务的成败，恰恰发生在视觉难以完全观测的局部接触瞬间，例如抓取时的滑移、插接时的微小对位误差、柔性物体受力后的形变以及工具与物体之间的隐式约束关系。

因此，触觉与力觉并不是旧路线的残余，而是在更高层语义能力增强之后重新暴露出来的基础短板。系统越想从“会看懂任务”迈向“会稳定做成任务”，就越需要把接触相关信息重新纳入观测与控制闭环中。

从大模型叙事回看机器人，很容易高估视觉语言能力、低估接触感知的重要性。但真正困难的操作任务往往都在接触瞬间暴露边界：插孔、旋盖、理线、布料整理、半遮挡抓取、精细装配几乎都离不开力觉与触觉。也正因为如此，触觉并不是“额外模态”，而是某些任务里决定成功上限的主模态。

这股重新升温还有一个更现实的原因：随着 VLA、通用策略和开放任务接口变强，系统在“接近正确对象、到达大致正确位置”这一步上的能力正在改善，于是剩余瓶颈自然集中到最后几厘米、最后几牛顿、最后几度姿态误差上。换句话说，高层能力越强，接触阶段暴露出来的短板反而越明显。也因此，未来很多具身系统的竞争点可能不再只是“能不能看懂任务”，而是谁能在接触瞬间保留更高的反馈密度与恢复能力。

这一点也使触觉与力觉不再只是“补充模态”，而更像决定系统是否能跨过最后一段执行鸿沟的关键反馈层。对于很多高价值任务，这一层很可能比再增加一层语义理解更直接决定上限。

从研究组织方式上看，接触感知重新升温还有一个含义：它会反向改变数据采集和评测方式。只要接触成为主要瓶颈，纯视频示教就越来越不够，系统就会需要更多带力觉、触觉和失败恢复标注的轨迹；相应地，评测也不能只看任务是否最终成功，还要看滑移率、接触稳定时间、超力事件和恢复成功率。也正因如此，触觉与力觉并不是感知章节的边缘补丁，而会继续向后影响训练闭环、VLA 接口和部署安全章节的写法。

若把这种变化压缩成一个更适合评测设计的接口，它更像是在原先“是否完成任务”的二元指标外，再增加一组接触质量指标：

\[
\text{Eval}_{\text{contact}}
=
(\text{slip rate},\ \text{over-force rate},\ \text{settling time},\ \text{recovery success})
\]

这个扩展的意义很大。因为很多系统表面上都能“最终完成”，但其代价可能是高滑移、高过力、长时间微调和大量人工接管。若评测协议不把这些中间变量记下来，后续训练就会天然偏好粗暴但看似成功的策略，而不是真正可部署的稳定接触行为。

从长期路线判断看，接触感知重新升温并不意味着视觉语言路线失效，而意味着具身系统开始进入更真实的瓶颈区。也就是说，前一阶段行业主要在解决“如何把任务语义和多模态感知接入机器人”；而下一阶段更可能聚焦“如何把这些高层能力真正穿过最后一段接触与执行鸿沟”。触觉、力觉以及围绕它们的数据、评测和安全协议，正是这道鸿沟的核心组成部分。

## 45. 多模态表示学习的关键问题

### 45.1 跨模态时间对齐
跨模态时间对齐的本质，是保证图像、关节状态、力觉、触觉和动作指令描述的是“同一个时刻附近的同一系统状态”。如果相机帧比控制命令慢了 100 毫秒，或者触觉数据与动作日志错位，模型学到的就可能不是因果关系，而只是错误相关性。

这个问题可以用一个极简但很有用的量来刻画：

```text
Δt_align = max_i |t_i - t_ref|
```

其中 `t_ref` 是参考时间轴，`t_i` 是第 `i` 个模态的有效时间戳。若 `Δt_align` 相对于控制周期、接触持续时间或关键状态切换窗口不可忽略，那么训练样本在语义上就已经被破坏。比如抓取接触只持续几十毫秒，而视觉与触觉错开上百毫秒时，模型看到的“图像 - 接触”关系可能根本不是同一次事件。

这可以进一步写成一个更具工程含义的约束：

\[
\Delta t_{\mathrm{align}} \ll \Delta t_{\mathrm{critical}}
\]

其中 \(\Delta t_{\mathrm{critical}}\) 表示当前任务里最关键事件的持续时间尺度，例如夹爪闭合瞬间、触地冲击窗口、接触稳定前的滑移阶段等。这个式子的意义在于提醒我们，对导航这种秒级问题也许几十毫秒错位尚可容忍，但对精细抓取、插接和动态平衡来说，同样的错位就足以把正确因果打乱。

工程上，跨模态对齐不只是后处理里的重采样问题，还包括统一时钟、记录采样延迟、补偿通信抖动、标记 dropped frame，以及在回放系统中保留原始时间戳。因为真正有价值的失败分析，往往不是看“平均对齐后的数据好不好看”，而是定位“究竟哪个模态先漂了、漂了多久、是否足以改变动作决策”。

最小对齐问题可以写成：

\[
(o_t^{vision}, o_t^{proprio}, o_t^{tactile}, a_t)
\]

这里关键不是符号本身，而是这些量是否真对应于同一时间窗。很多多模态模型效果不稳，根因并不在架构，而在数据时间轴已经先错了。

机器人中的多模态不是静态拼接问题，而是时间对齐问题。视觉帧率、IMU 频率、关节反馈频率、触觉采样率和语言交互频率完全不同，若这些信息在时间轴上对不齐，下游模型学到的往往不是跨模态一致结构，而是噪声相关性。

若以观测缓存 \(\{o_t^{(m)}\}\) 表示模态 \(m\) 的时间序列，一个常见融合目标可以抽象为：

\[
z_t = f_\theta\left(o_{t-\Delta_1:t}^{(1)}, o_{t-\Delta_2:t}^{(2)}, \dots, o_{t-\Delta_M:t}^{(M)}\right)
\]

关键不在于把所有模态喂进一个编码器，而在于每个时间窗口 \(\Delta_m\) 是否与该模态对任务的有效时间尺度匹配。对机器人来说，更进一步的问题还在于：这些窗口是否围绕同一事件对齐。例如“看到杯沿”“夹爪刚接触杯壁”“力信号开始上升”这三件事若没有围绕同一接触事件被组织，就算模型结构再复杂，也只是在学习错位后的跨模态噪声。

### 45.2 稀疏监督与弱监督
稀疏监督与弱监督之所以在机器人感知里重要，是因为真实场景下高质量逐帧三维标注、像素级语义标注和跨模态精对齐标签的成本都极高。很多系统不可能像自动驾驶头部项目那样长期投入海量人工精标，因此必须依赖更廉价但噪声更大的监督信号，例如抓取成败、任务完成标签、语言描述、轨迹对齐或跨视角一致性。

从学习目标上看，弱监督的价值不在于“省标注”，而在于把监督重新设计成更接近任务结果的信号。例如，一个抓取系统未必需要每个接触点都有精确标签，却可能需要大量“这个姿态最终抓起/没抓起”的结果反馈。相应地，表示学习也会从纯重建式目标转向结果导向式目标，把表征质量与可执行性更紧密地绑定。

但弱监督并非免费午餐。监督越弱，模型越容易学到伪相关，例如背景纹理、固定工位偏置或某类物体的偶然共现模式。因此本章讨论感知方法时，必须同时追问监督稀疏之后用了什么结构性约束，例如时序一致性、多视角几何、自监督预测、接触结果回传或跨模态对比学习，否则“少标注也能学”很容易被高估。

很多机器人任务没有精细标注，或者标注成本极高，因此表示学习必须更多依赖自监督、弱监督、时序一致性和任务结构。这里的关键不在于“能不能少标注”，而在于系统是否能在稀疏监督下仍然学出对行动有用的表征。

机器人语境中的“监督稀缺”不只是人工标签少，更关键的是很多真正重要的标签本来就很难显式定义。例如，“这次接近为何会在未来两步后失败”“这个对象当前是否处于可装配姿态”“该接触在未来是否会滑移”都很难由静态标签穷尽描述。于是，未来一致性、动作条件预测、失败后果、可达性变化和对比式状态区分，都会成为替代性监督信号。
这解释了为什么具身系统中的表征学习往往不是单一损失问题，而是面向任务闭环组织的多目标优化：既希望保留语义可迁移性，又希望保留与动力学和动作后果相关的结构，还希望在传感器缺失、场景变化和噪声扰动下保持稳定。所谓“好特征”，在机器人里最终不是由图像语义本身定义，而是由它能否稳健服务后续行动定义。

从工程实现上看，这也意味着很多机器人表征学习不会依赖单一金标准标签，而会组合使用时序一致性、跨模态对齐、动作条件预测、失败对比样本和少量人工关键帧标注。真正的目标不是把监督做得“更省”，而是把监督预算投到最能改变闭环成败的地方。对长期维护型项目而言，这种弱监督体系还直接关系到数据闭环的可持续性，因为后续章节中的数据工程和失败回流都建立在这种监督现实之上。

### 45.3 数据缺失、噪声与传感器漂移
对机器人感知系统而言，数据问题通常不是“有噪声”这么简单，而是缺失、噪声和漂移会长期并存。缺失意味着某些关键信息根本观测不到，例如遮挡后的目标局部几何；噪声意味着观测值存在随机波动；漂移则意味着误差会随时间累积，例如相机外参轻微变化、深度尺度偏移或力传感器零点变化。三者对应的补救方式并不相同。

如果把观测写成
\[
\tilde{o}_t = h(o_t) + \epsilon_t + \delta_t
\]
那么 \(\epsilon_t\) 可理解为随机噪声，\(\delta_t\) 更接近慢变量漂移，而 \(h(\cdot)\) 本身还可能因为遮挡与缺测而不可逆。很多实验只在 \(\epsilon_t\) 上做数据增强，却忽略了 \(\delta_t\) 和缺测机制，因而在长时间部署后快速失稳。

因此，真正成熟的感知系统不能只依赖离线训练鲁棒性，而必须配套在线校准、健康监控、异常检测与多源冗余。对于具身智能而言，传感器漂移不是边角问题，而是长期运行中几乎必然出现的系统性约束。谁能把漂移纳入日常维护闭环，谁的感知能力才更接近可交付能力。

具身系统中的感知问题，很少发生在“理想输入完全错误”的极端情况，更常见的是数据间歇缺失、模态不同步、标定逐步漂移以及局部噪声长期累积。单次看似很小的偏差，在长时运行和多模态融合中会不断传递，最终影响状态估计、抓取定位和策略稳定性。

这也是为什么很多实验室里表现不错的感知模型，一旦进入长时程现场运行后就会显著掉线。真正成熟的感知系统不仅需要高精度模型，还需要监测传感器健康、识别漂移、触发重标定和在信息不完整时做保守退化运行的机制。
因此，具身感知系统的鲁棒性不应只靠训练时“加点噪声增强”来理解，更应被看作一套跨层工程策略：传感器层的校准与健康监测、表征层的缺失补偿与不确定性估计、规划层的保守决策边界，以及执行层的失败恢复机制共同决定了感知噪声最终会不会演化为系统错误。换句话说，噪声不是感知模块自己的问题，而是整个具身闭环如何吸收不确定性的试金石。

真实机器人系统中的感知链路从来不是干净数据集：遮挡、反光、模糊、失焦、IMU 漂移、力觉噪声、触觉磨损和通信延迟都会长期存在。因此，表示学习若只在理想化数据条件下成立，就很难支撑长期部署。

### 45.4 感知输出究竟应该长什么样
这其实是整个具身系统设计中的根问题之一。感知输出可以是像素级特征图、对象列表、场景图、潜空间向量、占据网格、抓取候选集合，或者它们的组合。不同选择决定了后续规划器和控制器“看见的世界”长什么样。

一个实用判断框架是：

1. 若后续需要精细操控，输出应保留几何与接触相关信息。
2. 若后续需要长时程规划，输出应保留对象身份、关系和历史摘要。
3. 若后续需要部署可诊断性，输出应尽量带置信度、时间戳与异常标记。
4. 若后续需要端到端训练，输出还要兼顾可微与可学习接口。

换句话说，感知输出不是单一最优格式问题，而是系统分层设计问题。很多路线争议表面上是在讨论 perception model，实则是在讨论“世界应该在系统里以什么形式被表示”。这也解释了为什么同样一套视觉 backbone，在不同机器人架构中会被包成截然不同的中间接口。

若把一个更接近执行系统消费方式的状态结构写出来，它常常更像：

\[
s_t = \left(\{(id_i, \hat{T}_i, A_i, R_i, U_i)\}_{i=1}^{N},\ x_t^{robot},\ h_t^{task}\right)
\]

其中 \(id_i\) 是对象身份，\(\hat{T}_i\) 是对象位姿或几何锚点，\(A_i\) 是可供性或可交互属性，\(R_i\) 是关系结构，\(U_i\) 是不确定性，\(x_t^{robot}\) 表示机器人自身状态，\(h_t^{task}\) 表示任务阶段摘要。这个结构的价值，在于它把“感知输出到底该长什么样”从抽象讨论落回一个非常具体的问题：下游究竟需要消费对象、位姿、关系、风险，还是只需要一个全局 embedding。

因此，感知输出形式本身就是架构设计，而不是感知模块做完以后再随手封装的附属品。
把这一点说得更明确一些，机器人感知输出更接近“可执行状态接口”，而不是“高维特征本身”。一个真正好用的输出往往要同时满足几件事：能被下游规划或控制直接消费，含有必要的不确定性或置信度信息，能在多帧间保持身份与几何一致性，并能在失败后支持重定位与重解释。因此，报告后文在讨论 VLA、世界模型或技能库时，都应反过来问一句：这些上层能力到底消耗的是什么感知接口，如果接口定义不清，上层能力很容易只是表面统一。

这也是具身感知与通用视觉最大的分歧之一。对互联网视觉而言，一个全局语义 embedding 往往已经足够；对机器人而言，更有用的输出通常是对象级、位姿级、可供性级或接触风险级的结构化变量。也就是说，“好的视觉特征”与“好的机器人感知输出”并不完全等价。

下面给出一个极简代码片段，示意如何把深度图转为点云并送入下游估计器：

```python
def depth_to_pointcloud(depth, fx, fy, cx, cy):
    points = []
    h, w = depth.shape
    for v in range(h):
        for u in range(w):
            d = depth[v, u]
            if d <= 0:
                continue
            x = (u - cx) * d / fx
            y = (v - cy) * d / fy
            z = d
            points.append((x, y, z))
    return points
```

这段代码当然过于简化，但它很好地说明了一个事实：机器人感知永远要从“图像被解释”走向“几何被计算”，再走向“动作被约束”。

本部分的结论是：感知与表示学习在具身系统中的价值，根本上取决于它能否生成对行动有用、对时序稳定、对多模态一致、对部署扰动有韧性的内部状态结构。也正因为此，第十部分关于世界模型和第十一部分关于 VLA 的讨论，都应被视为在这些表示之上继续构造更高层能力，而不是替代感知问题本身。

## 图表补充说明
本章后续配图最有价值的方向，不是再补一张泛泛的感知模块堆叠图，而是把 `2D / 3D / 触觉 / 本体感觉` 的多模态接口关系画清楚，尤其强调它们在时间同步、对象级对齐和动作约束中的不同作用。这样读者更容易理解为什么机器人感知不是“多加几个传感器”这么简单。

另一个值得正式纳入正文的比较，是“机器人感知成功标准”与“通用视觉 benchmark 成功标准”的差异。前者更关心可执行状态是否被正确提取，后者更关心识别或预测精度本身。把这两个口径放进同一张对照表，会直接帮助读者理解为什么通用视觉高分并不自动等于机器人可部署感知。

在当前版本中，`图 9-1 感知到动作的状态漏斗图` 已承担多模态接口图的正文职责：它并不只是罗列传感器种类，而是把原始观测、对象级状态、任务相关表示与可执行状态之间的压缩链条显式化，从而更贴近机器人系统真正关心的接口问题。

“机器人感知成功标准”与“通用视觉 benchmark 成功标准”的口径差异，则已整理为 `表 9-1 机器人感知成功标准 vs 通用视觉 Benchmark 成功标准对照表`，用于稳定支撑本章关于“高视觉分数不自动等于高部署价值”的核心判断。
## 图 9-1 感知到动作的状态漏斗图
源文件：`assets/diagrams/09-感知到动作的状态漏斗图.mmd`

```mermaid
flowchart LR
    A["原始观测<br/>RGB / 深度 / 点云 / 力觉 / 触觉 / IMU"] --> B["时间同步与标定<br/>外参 / 时钟 / 去噪 / 缺失补偿"]
    B --> C["模态内表征<br/>2D特征 / 3D几何 / 接触表征 / 本体状态"]
    C --> D["跨模态对齐<br/>对象级 / 位姿级 / 接触级 / 任务级"]
    D --> E["任务相关状态<br/>可抓取性 / 可达性 / 遮挡关系 / 风险"]
    E --> F["下游消费方<br/>状态估计 / 规划 / 技能 / 控制 / 恢复"]
```

## 表 9-1 机器人感知成功标准 vs 通用视觉 Benchmark 成功标准对照表

见 [09-机器人感知成功标准对照表](docs/report/versions/v0.1/tables/09-机器人感知成功标准对照表.md)。
